<resources>
    <string name="app_name">"CampIn"</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="create_trip_title">יצירת טיול חדש</string>
    <string name="errorOccure">התרחשה שגיאה, אנא נסה שנית</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="details_car">"רכב"</string>
    <string name="details_car_question">"האם יש ברשותך רכב ?"
    </string>
    <string name="details_fav_areas">"מהם האזורים המועדפים עלייך ?"
    </string>
    <string name="facebook_app_id">206721193159973</string>
    <string name="fb_login_protocol_scheme">fb206721193159973</string>
    <string name="title_activity_create_trip">CreateTripActivity</string>
    <string name="title_activity_add_friends">AddFriendsActivity</string>
    <string name="title_activity_signup">SignUpActivity</string>

    <!-- Details Strings -->
    <string name="Somewhere">גליל עליון</string>
    <string name="Sometime">אביב</string>
    <string name="who">חברים</string>
    <string name="trip_details">פרטי הטיול</string>
    <string name="trip_equipment">ציוד נדרש</string>
    <string name="trip_comments">תגובות</string>

    <string name="trip_details_content">אורך המסלול בנחל עיון הוא כ-2 ק"מ והוא מתאים למשפחות. לשמורה שתי כניסות: צפונית ודרומית. המסלול המומלץ מתחיל בכניסה הצפונית ומסתיים בדרומית – כלומר הוא אינו מעגלי ומחייב הגעה בשני רכבים. בסופי שבוע ובחגים מופעל בשמורה שאטל שמקפיץ את המטיילים בחינם בין שתי הכניסות (בכל חצי שעה בין 9:30-16:30). בימים אחרים ניתן להיעזר בטרמפים או לטייל במסלול הלוך-חזור.
אם זמנכם קצר, תוכלו להסתפק במסלול קווי קצר מהכניסה הדרומית עד מפל התנור ובחזרה.</string>

    <string-array name="trip_equipments_content">
        <item name="shoes">נעלי הליכה</item>
        <item name="waterShoes">נעליים למים</item>
        <item name="clothes">בגדים להחלפה</item>
        <item name="water">3 ליטר מים</item>
    </string-array>

    <string name="det_reagent">אלזה מארנדל</string>
    <string name="det_comment">היה טיול מדהים! קשה ומאתגר אבל נופים מהממים!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_line">\n</string>

</resources>
