<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.campin.Fragments.DetailsFragment"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/article_keylines"
            app:expandedTitleMarginStart="@dimen/md_keylines"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="@drawable/a"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/details_bar"
                android:paddingBottom="@dimen/details_bar">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="*">
                    <TableRow
                        android:layout_width="0dip">

                        <LinearLayout
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="25dip"
                                android:layout_height="25dip"
                                android:src="@drawable/location_icon"
                                android:layout_gravity="center"/>

                            <TextView
                                android:id="@+id/det_where"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Somewhere"
                                android:padding="10dip"/>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="25dip"
                                android:layout_height="25dip"
                                android:src="@drawable/time_icon"
                                android:layout_gravity="center"/>

                            <TextView
                                android:id="@+id/det_when"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Sometime"
                                android:padding="10dip"/>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="25dip"
                                android:layout_height="25dip"
                                android:src="@drawable/friends_icon"
                                android:layout_gravity="center"/>

                            <TextView
                                android:id="@+id/det_who"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Somewho"
                                android:padding="10dip"/>
                        </LinearLayout>
                    </TableRow>
                </TableLayout>
            </android.support.v7.widget.CardView>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TableRow
                    android:id="@+id/det_details_row"
                    style="@style/TripRowStyle">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/trip_details"
                            style="@style/TitleStyle" />

                        <TextView
                            android:text=""
                            style="@style/ContentStyle"
                            android:id="@+id/det_details_content"/>
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/det_equipment_row"
                    style="@style/TripRowStyle">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/trip_equipment"
                            style="@style/TitleStyle" />

                        <TextView
                            android:text=""
                            style="@style/ContentStyle"
                            android:id="@+id/det_equipment_content"/>

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/det_comments_row"
                    style="@style/TripRowStyle">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/trip_comments"
                            style="@style/TitleStyle" />

                        <TextView
                            android:text=""
                            style="@style/ContentStyle"
                            android:id="@+id/det_comments_content"/>


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/det_comment">

                            <ImageView
                                android:id="@+id/det_avatar"
                                android:layout_width="@dimen/avator_size"
                                android:layout_height="@dimen/avator_size"
                                android:scaleType="centerCrop"
                                tools:src="@drawable/a_avator" />

                            <TextView
                                android:id="@+id/reagent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toLeftOf="@+id/det_avatar"
                                android:text="@string/det_reagent"/>

                            <RatingBar
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/trip_details"
                                android:numStars="5"
                                android:stepSize="1.0"
                                android:rating="4"
                                android:isIndicator="true"
                                android:progressTint="@color/rating"
                                style="@android:style/Widget.Material.RatingBar.Small"
                                android:layout_alignParentLeft="true"/>

                            <TextView
                                android:layout_below="@+id/reagent"
                                android:layout_toLeftOf="@+id/det_avatar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/det_comment"/>
                        </RelativeLayout>

                    </LinearLayout>
                </TableRow>

            </TableLayout>

            <!--<ListView-->
                <!--android:id="@+id/det_eqmp_list"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:divider="@null"-->
                <!--android:dividerHeight="0dp"-->
                <!--tools:listitem="@layout/trip_equipment_row"/>-->

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
